# tyre-recommender

./: .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  start.sh  telegram_bot.py
data/: tyres.csv
index/: metadata.pkl
src/: config.py  main.py
src/api/: schemas.py  server.py
src/embeddings/: embedding_model.py
src/indexing/: faiss_indexer.py
src/ingestion/: csv_loader.py
src/llm/: response_generator.py
src/recommender/: tyre_recommender.py
src/search/: vector_search.py
src/utils/: document_builder.py  logger.py
